--- a/trunk/ProcTerrain/ProcTerrain/ProcTerrain.vcproj
+++ b/trunk/ProcTerrain/ProcTerrain/ProcTerrain.vcproj
@@ -116,7 +116,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../libs/glew/include;../libs/glfw/include;../libs/ftgl/src;../freetype/include"
+				AdditionalIncludeDirectories="../libs/glew/include;../libs/glfw/include;../libs/ftgl/src;../libs/freetype/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -136,6 +136,83 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="../libs/glew/lib/$(ConfigurationName)/glew.lib ../libs/glfw/lib/$(ConfigurationName)/glfw.lib ../libs/ftgl/lib/$(ConfigurationName)/ftgl.lib ../libs/freetype/lib/$(ConfigurationName)/freetype.lib opengl32.lib glu32.lib"
+				LinkIncremental="1"
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release-without whole code optmization|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
+				WholeProgramOptimization="false"
+				AdditionalIncludeDirectories="../libs/glew/include;../libs/glfw/include;../libs/ftgl/src;../libs/freetype/include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;GLEW_STATIC"
+				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="../libs/glew/lib/Release/glew.lib ../libs/glfw/lib/Release/glfw.lib ../libs/ftgl/lib/Release/ftgl.lib ../libs/freetype/lib/Release/freetype.lib opengl32.lib glu32.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
