--- a/trunk/ProcTerrain/libs/freetype/builds/win32/vc2008/freetype.vcproj
+++ b/trunk/ProcTerrain/libs/freetype/builds/win32/vc2008/freetype.vcproj
@@ -43,6 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="..\..\..\include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_CRT_SECURE_NO_WARNINGS;FT2_BUILD_LIBRARY"
 				StringPooling="true"
